# evaluating-xai-credit-explanations

./: .gitignore  PUBLIC_REPO_SETUP.md  README.md  pyproject.toml
config/: config.json  config.py  env.template
data/: Data Dictionary.xls
data/processed/: X_train_undersampled.csv  y_train_undersampled.csv
notebooks/: clustering.ipynb  explanation_evaluation.ipynb  judgeLLM_batch_evaluation.ipynb  model_explanation.ipynb  model_training.ipynb  sampling.ipynb
output/: sampling_stats.xlsx
output/clustering/: cluster_assignments.json
output/evaluations/: batch_results_raw_65s8qwgnmlqfjs5x8irnv6yktjl9ibt64ph0.json  cemat_items_summary.xlsx  metrics_summary_by_llm.xlsx  semscore_analysis_summary.xlsx
output/llm_explanations/: explanations.json
output/models/: best_model.pkl  model_metadata.json
output/predictions/: prediction_results_sampled.json
scripts/: evaluate_llm_responses.py  explain_predictions.py  predict_batch.py  process_batch_evaluation_results.py
src/xai_pkg/: __init__.py
src/xai_pkg/evaluator/: counterfactual_verification.py  judgeLLM.py  response_evaluator.py  semscore_eval.py  utils.py
src/xai_pkg/llm_integration/: decision_explainer.py  extraction_models.py  prompts.py
src/xai_pkg/model_explainer/: base_explainer.py  counterfactual_explainer.py  predictor.py  shap_explainer.py  utils.py
src/xai_pkg/model_training/: evaluation.py  preprocessing.py  tuning.py
src/xai_pkg/sampling/: utils.py
src/xai_pkg/storage/: dynamodb_client.py
